Fixed navigation bar with a footer that needs to be stuck to the bottom of the page

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,9 +15,8 @@ body {
     -webkit-text-fill-color: transparent;
 }
 
-.topnav {
+.navbar {
     background-color: #333;
-    overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -29,7 +28,6 @@ body {
 
 .dropdown {
     float: left;
-    overflow: hidden;
 }
 
 .dropdown .dropbtn {
@@ -48,13 +46,12 @@ body {
     color: black;
 }
 
-.dropdown-content {
+.dropdown-menu {
     display: none;
-    position: absolute;
     background-color: #333;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+    z-index: 0;
 }
 
 .dropdown-content a {
@@ -70,11 +67,8 @@ body {
     background-color: #ddd;
 }
 
-.dropdown:hover .dropdown-content {
-    display: block;
-}
 
-.topnav a {
+.navbar a {
     float: center;
     display: block;
     color: #f2f2f2;
@@ -84,36 +78,36 @@ body {
     font-size: 17px;
 }
 
-.topnav a:hover {
+.navbar a:hover {
     background-color: #696969;
     color: black;
 }
 
-.topnav a.active {
+.navbar-brand {
     background-color: #4CAF50;
     color: white;
 }
 
-.topnav .icon {
+.navbar .icon {
     display: none;
 }
 
 @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
+    .navbar a:not(:first-child) {display: none;}
+    .navbar a.icon {
         float: right;
         display: block;
     }
 }
 
 @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive .icon {
+    .navbar.responsive {position: relative;}
+    .navbar.responsive .icon {
         position: absolute;
         right: 0;
         top: 0;
     }
-    .topnav.responsive a {
+    .navbar.responsive a {
         float: none;
         display: block;
         text-align: left;
@@ -125,5 +119,12 @@ body {
     border-bottom: 1px ridge;
     min-height: 200px;
     margin-left: 0px;
+}
+
+.header {
+    background-image: linear-gradient(45deg, #65f341, #1c851c, #0c4115);
+    margin-bottom: 1px;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
 
